refactor: Prefer String#formatted(Object...)
See :
- https://docs.openrewrite.org/recipes/java/migrate/lang/stringformatted